<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/show_dialog_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/dialog_bg"
        android:padding="16dp"
        android:text="@string/show_dialog_1"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/show_dialog_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/show_dialog_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/dialog_bg"
        android:padding="16dp"
        android:text="@string/show_dialog_2"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/show_dialog_3"
        app:layout_constraintEnd_toEndOf="@+id/show_dialog_1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/show_dialog_1"
        app:layout_constraintTop_toBottomOf="@+id/show_dialog_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/show_dialog_3"
        style="@style/ButtonStyle"
        android:text="@string/show_dialog_3"
        app:layout_constraintBottom_toTopOf="@+id/show_dialog_4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@id/show_dialog_2"
        app:layout_constraintRight_toRightOf="@id/show_dialog_2"
        app:layout_constraintTop_toBottomOf="@+id/show_dialog_2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/show_dialog_4"
        style="@style/ButtonStyle"
        android:text="@string/show_dialog_4"
        app:layout_constraintBottom_toTopOf="@+id/show_dialog_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@id/show_dialog_2"
        app:layout_constraintRight_toRightOf="@id/show_dialog_2"
        app:layout_constraintTop_toBottomOf="@+id/show_dialog_3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/show_dialog_5"
        style="@style/ButtonStyle"
        android:text="@string/show_dialog_5"
        app:layout_constraintBottom_toTopOf="@+id/show_dialog_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@id/show_dialog_2"
        app:layout_constraintRight_toRightOf="@id/show_dialog_2"
        app:layout_constraintTop_toBottomOf="@+id/show_dialog_4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/show_dialog_6"
        style="@style/ButtonStyle"
        android:text="@string/show_dialog_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@id/show_dialog_2"
        app:layout_constraintRight_toRightOf="@id/show_dialog_2"
        app:layout_constraintTop_toBottomOf="@+id/show_dialog_5" />

</androidx.constraintlayout.widget.ConstraintLayout>