<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentLayout"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/dialog_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_icon_cancel"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="end"
        app:srcCompat="@drawable/ic_baseline_cancel_24" />

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/ic_shopping" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:fontFamily="monospace" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/check_any_cables_and_reboot_any_routers_modems_or_other_network_devices_you_may_be_using"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="14sp"
        android:fontFamily="monospace" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:orientation="horizontal" >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:layout_marginEnd="8dp"
            android:text="@string/buy"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="12sp"
            android:fontFamily="monospace" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_go_to_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:layout_marginStart="8dp"
            android:text="@string/go_to_home"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="12sp"
            android:fontFamily="monospace" />
    </LinearLayout>


</LinearLayout>